<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gravity_switch" />

    <RadioGroup
        android:id="@+id/radioGroupCats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <RadioButton
            android:id="@+id/radioCat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_option_1" />

        <RadioButton
            android:id="@+id/radioCat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_option_2" />

        <RadioButton
            android:id="@+id/radioCat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_option_3" />

        <RadioButton
            android:id="@+id/radioCat4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_option_4" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButtonCat"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cat1"
        android:background="@null"
        android:contentDescription="@string/cat_image_cont_desc" />
</LinearLayout>
